@@ -384,6 +384,9 @@ Trunk -  Unreleased
     HIVE-1017 || and && are not supported currently
     (Ning Zhang via namit)
 
+    HIVE-916 typedbytes: changes
+    (namit via He Yongqiang)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
